--- a/login/templates/login/base.html
+++ b/login/templates/login/base.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" type="text/css" href="{% static 'login/main.css' %}">
         <script type="text/javascript" src="{% static 'apis.js' %}"></script>
         <script type="text/javascript" src="{% static 'login/login.js' %}"></script>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="contentDialog">
