--- a/login/static/login/main.css
+++ b/login/static/login/main.css
@@ -1,125 +1,1 @@
-html {
-    background: #32325d;
-
-    font-family: 'Roboto', sans-serif;
-    color: #6b7c93;
-}
-
-.contentDialog {
-    display: table;
-    margin: 5% auto;
-
-    max-width: 25%;
-    width: 25%;
-}
-
-.contentDialogWrapper {
-    background-color: #f7f8f9;
-
-    box-shadow: 0 1px 3px 0 #cfd7df;
-
-    padding: 2em;
-}
-
-.contentDialog-logo {
-    text-align: center;
-    font-size: 125%;
-    letter-spacing: 1px;
-
-    margin-bottom: 1em;
-
-    color: white;
-}
-
-.contentDialogWrapper-header {
-    text-align: center;
-    font-size: 125%;
-}
-
-.contentDialogWrapper-form {
-    display: flex;
-    flex-direction: column;
-
-    width: 100%;
-
-    margin-top: 2em;
-}
-
-input 
-{
-    width: 75%;
-
-    margin-left: auto;
-    margin-right: auto;
-
-    outline: none;
-    border: none;
-
-    padding: 10px 12px;
-
-    border: 1px solid transparent;
-    border-radius: 4px;
-    background-color: white;
-
-    box-shadow: 0 1px 3px 0 #e6ebf1;
-    transition: box-shadow 150ms ease;
-
-    margin-top: 1em;
-
-    color: #6b7c93;
-}
-input:focus
-{
-    box-shadow: 0 1px 3px 0 #cfd7df;
-}
-.contentDialogWrapper-form-login
-{
-    margin-left: auto;
-    margin-right: auto;
-
-    margin-top: 2em;
-
-    color: white;
-    letter-spacing: 0.078125rem;
-
-    background: #32325d;
-
-    padding: .5em 1em;
-
-    border-radius: 4px;
-
-    cursor: pointer;
-
-    transition: all 150ms ease;
-}
-.contentDialogWrapper-form-login:hover
-{
-    background: #43458b;
-
-    box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
-
-    transform: translateY(-2px);
-}
-.contentDialog-error
-{
-    text-align: center;
-    color: white;
-
-    margin-top: 2em;
-
-    font-family: 'Open Sans', sans-serif;
-}
-
-@media only screen and (max-width : 800px)
-{
-    .contentDialog
-    {
-        max-width: 100%;
-        width: 100%;
-
-        box-sizing: border-box;
-
-        padding-left: .5em;
-        padding-right: .5em
-    }
-}
+.contentDialog-logo,.contentDialogWrapper-header{font-size:125%;text-align:center}.contentDialogWrapper,input:focus{box-shadow:0 1px 3px 0 #cfd7df}html{background:#32325d;font-family:Roboto,sans-serif;color:#6b7c93}.contentDialog{display:table;margin:5% auto;max-width:25%;width:25%}.contentDialogWrapper{background-color:#f7f8f9;padding:2em}.contentDialog-logo{letter-spacing:1px;margin-bottom:1em;color:#fff}.contentDialogWrapper-form{display:flex;flex-direction:column;width:100%;margin-top:2em}input{width:75%;margin-left:auto;margin-right:auto;outline:0;padding:10px 12px;border:1px solid transparent;border-radius:4px;background-color:#fff;box-shadow:0 1px 3px 0 #e6ebf1;transition:box-shadow 150ms ease;margin-top:1em;color:#6b7c93}.contentDialogWrapper-form-login{margin-left:auto;margin-right:auto;margin-top:2em;color:#fff;letter-spacing:.078125rem;background:#32325d;padding:.5em 1em;border-radius:4px;cursor:pointer;transition:all 150ms ease}.contentDialogWrapper-form-login:hover{background:#43458b;box-shadow:0 7px 14px rgba(50,50,93,.1),0 3px 6px rgba(0,0,0,.08);transform:translateY(-2px)}.contentDialog-error{text-align:center;color:#fff;margin-top:2em;font-family:'Open Sans',sans-serif}@media only screen and (max-width :800px){.contentDialog{max-width:100%;width:100%;box-sizing:border-box;padding-left:.5em;padding-right:.5em}}
