--- a/dashboard/templates/dashboard/superuser.html
+++ b/dashboard/templates/dashboard/superuser.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% block content %}
-    <div class="content-section">
+    <div class="content-section" data-searchlabel="People">
         <div class="content-people">
             {% for user in first_user_set %}
                 <div class="people-node">
