removed scroll function

--- a/dashboard/static/dashboard/base.css
+++ b/dashboard/static/dashboard/base.css
@@ -105,8 +105,7 @@ html, body
     padding: 1em;
 
     max-height: 10em;
-
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .headbar-search-box
 {
